[tool.poetry]
name = "podping.cloud"
version = "0.1.0"
description = ""
authors = ["Brian of London"]

[tool.poetry.dependencies]
python = "^3.9"
zmq = "^0.0.0"
beem = "^0.24.26"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
